src/objects/GeneralSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Hierarchical settings that may apply to any area of the application and can be referenced via code as well as config. Before creating additional hierarchical custom settings, consider whether you can add fields to this setting and achieve the same results.</description>
    <fields>
        <fullName>ApproverFinance1CanadaConcerts__c</fullName>
        <label>Approver: Finance1 Canada Concerts</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApproverFinance1TheatersClubs__c</fullName>
        <label>Approver: Finance1 Theaters &amp; Clubs</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApproverFinance1USConcerts__c</fullName>
        <label>Approver: Finance1 US Concerts</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApproverFinance2USConcerts__c</fullName>
        <label>Approver: Finance2 US Concerts</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApproverFinance3__c</fullName>
        <label>Approver: Finance3</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApproverSecondLevelCanadaConcerts__c</fullName>
        <label>Approver: Second-Level Canada Concerts</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApproverSecondLevelTheatersClubs__c</fullName>
        <label>Approver: Second-Level Theaters &amp; Clubs</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApproverSecondLevelUSConcertsEast__c</fullName>
        <label>Approver: Second-Level US Concerts East</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApproverSecondLevelUSConcertsWest__c</fullName>
        <label>Approver: Second-Level US Concerts West</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ArtistDataReviewer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked for a profile or user, enables user to bypass the artist record&apos;s status value to &quot;In Review&quot; upon record creation.</description>
        <inlineHelpText>When checked for a profile or user, enables user to bypass the artist record&apos;s status value to &quot;In Review&quot; upon record creation.</inlineHelpText>
        <label>Artist Data Reviewer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BypassAutomationFinancialCalculator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Bypasses Automation - Financial Calculator
(used within data loads)</description>
        <label>Bypass Automation-Financial Calculator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BypassAutomation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>All forms of workflow (Process Builder, Flow, workflow rules), validation rules, and triggers will be prevented from running when changing this value to true/checked. Apply at the org, profile, or user level.</description>
        <inlineHelpText>All forms of workflow (Process Builder, Flow, workflow rules), validation rules, and triggers will be prevented from running when changing this value to true/checked. Apply at the org, profile, or user level.</inlineHelpText>
        <label>Bypass Automation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BypassMultiCurrency__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>If this flag is checked, then the multi-currency work will not be executed.
(FOR DEVELOPMENT PURPOSES ONLY, to be removed on completion)</inlineHelpText>
        <label>Bypass Multi-Currency</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BypassPBFlow__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Flag that bypasses all Process Builder Flows.</inlineHelpText>
        <label>Bypass PB Flow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CoPromoterDataReviewer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked for a profile or user, enables user to bypass the co-promoters record&apos;s status value to &quot;In Review&quot; upon record creation.</description>
        <inlineHelpText>When checked for a profile or user, enables user to bypass the co-promoters record&apos;s status value to &quot;In Review&quot; upon record creation.</inlineHelpText>
        <label>Co-Promoter Data Reviewer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DebugAPI__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Currently this only means that additional information is provided for error messages on the API.</description>
        <inlineHelpText>Whether additional information should be provided for working with the API.</inlineHelpText>
        <label>Debug API</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DefaultEventApproverID__c</fullName>
        <inlineHelpText>The ID of the user who will be assigned as the Event default first-level approver if no other approver is found</inlineHelpText>
        <label>Default Event Approver ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ForceFlagLogic__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>With this field checked, Flag flows/logic will will not be bypassed.</inlineHelpText>
        <label>Force Flag Logic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GlobalDataAdministrator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked for a profile or user, enables user to bypass many workflows and validation rules that might otherwise prevent successful editing or loading of data. Generally used for the integration and system admin profiles as well as granting a higher level of access to trusted users.</description>
        <inlineHelpText>When checked for a profile or user, enables user to bypass many workflows and validation rules that might otherwise prevent successful editing or loading of data. May grant a higher level of access to trusted users on an exception basis.</inlineHelpText>
        <label>Global Data Administrator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Grid_Lost_Focus_Poll_Interval__c</fullName>
        <description>Used in ExpensesTab and AncillaryTab VF pages javascript to set how often the code polls to check the current in focus element. Used to show warning if grid has focus removed but has unsaved changes. Please enter a numeric value for the desired milliseconds.</description>
        <label>Grid Lost Focus Poll Interval</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NotificationAgeLimit__c</fullName>
        <defaultValue>7</defaultValue>
        <inlineHelpText>The limit in number of days that a Notification record is allowed to live.  A daily batch will remove any Notification record that is older than the limit in days.</inlineHelpText>
        <label>Notification Age Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SearchLimit__c</fullName>
        <defaultValue>500</defaultValue>
        <inlineHelpText>The most number of records to be returned from a &apos;Search&apos; that would not require further filtering/narrowing of search.</inlineHelpText>
        <label>Search Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SponsorDataReviewer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sponsor Data Reviewer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VendorDataReviewer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked for a profile or user, enables user to bypass the vendor record&apos;s status value to &quot;In Review&quot; upon record creation.</description>
        <inlineHelpText>When checked for a profile or user, enables user to bypass the vendor record&apos;s status value to &quot;In Review&quot; upon record creation.</inlineHelpText>
        <label>Vendor Data Reviewer</label>
        <type>Checkbox</type>
    </fields>
    <label>General Settings</label>
</CustomObject>